spacesaver/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-idle
  labels:
    app.kubernetes.io/managed-by: spacesaver
